--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "scripts": {
     "test": "jest",
-    "prepare":"husky install"
+    "prepare": "husky install"
   },
   "name": "level4",
   "version": "1.0.0",
@@ -19,6 +19,13 @@
     "husky": "^8.0.1",
     "jest": "^29.1.2"
   },
+  "lint-staged": {
+    "*.js": [
+      "eslint",
+      "prettier --write ."
+    ]
+  },
+
   "author": "",
   "license": "ISC",
   "description": ""
