--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
       "prettier --write ."
     ]
   },
-  "author": "",
+  "author": "Singireddy Karthik <karthiksingireddy26@gmail.com>",
   "license": "ISC",
   "description": ""
 }
